--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iobroker.ocpp21",
-  "version": "0.1.3",
-  "description": "ioBroker adapter providing OCPP 1.6J + 2.0.1 + 2.1 (server) with rich 1.6 datapoints & controls",
+  "version": "0.1.4",
+  "description": "ioBroker adapter providing OCPP 1.6J + 2.0.1 + 2.1 (server) with full 1.6 measurands (incl. SoC)",
   "author": "You",
   "license": "MIT",
   "main": "main.js",
@@ -22,6 +22,8 @@
     "ocpp",
     "ocpp1.6",
     "ocpp2.0.1",
-    "ocpp2.1"
+    "ocpp2.1",
+    "state of charge",
+    "SoC"
   ]
 }
